@@ -80,6 +80,8 @@
     * Allow to configure check-/retry_interval in second precision
     * vSphere secret is not shown to the user via WATO anymore
     * FIX: do validation of check items in rule editor
+    * New rules for jolokia check (JVM): uptime, threads, sessions,
+                                         requests, queue
 
     Notifications:
     * Flexible Notification can now filter service levels
